--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "glob": "^8.0.3",
     "ramda": "^0.28.0",
     "ramda-generators": "^0.4.1",
+    "remark": "^14.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
-    "@types/node": "^18.11.10"
+    "@types/node": "^18.11.10",
+    "remark-language-server": "^2.0.0"
   }
 }
