--- a/fs-compiler/fs-compiler.fsproj
+++ b/fs-compiler/fs-compiler.fsproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Lexar.fs" />
+    <Compile Include="Lexer.fs" />
     <Compile Include="Parser.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
